# perfect6502

./: CMakeLists.txt
private/: emulator.cpp  netlist_sim.c  perfect6502.c  perfect6502.h
public/perfect6502/: emulator.hpp  pch.hpp  types.hpp
